pkl-core/src/test/files/LanguageSnippetTests/input/errors/keywordNotAllowedHere4.pkl
// `record` is reserved but not used right now
record = 5
